# assignment1BT2

./: .gitignore  Cargo.toml  README.md
src/: main.rs
static/: index.html  index2.html  info.html  news.html  news_st.html  prices.html
