[package]
name = "crypto_news_aggregator"
version = "0.1.0"
edition = "2024"

[dependencies]

reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
actix-web = "4"
dotenv = "0.15"
actix-files = "0.6"
serde_json = "1.0"
tera = "1.17.0"



